# AURORA

./: .gitignore  Cargo.toml  README.ja.md  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
authority/: .gitignore  Cargo.toml  config.json
authority/src/: domain.rs  lib.rs  main.rs
benches/: ascon.rs  aurora.rs  hornet.rs  prove.rs  zkboo.rs
docs/: bidirectional-demo.md  localnet-three-router.md  policy-authority.md  qemu-three-router-aarch64.md  qemu-three-router.md  router-setup-plan.md  rtos_frame.md  salt-prism-implementation-plan.md  zkmb-hornet-protocol.md
example/: generate_demo_configs.rs  localnet_prep.rs  pa.rs  routing.rs  rtos_frame.rs
kernel/: Cargo.toml  build.rs
kernel/src/: acpi.rs  apic.rs  arch.rs  device_tree.rs  fs.rs  heap.rs  hpet.rs  interrupts.rs  main.rs  memory.rs  memory.verus.rs  net.rs  paging.rs  paging.verus.rs  pci.rs  pic.rs  pit.rs  port.rs  serial.rs  syscall.rs  time.rs  user.rs  virtio.rs  virtio_mmio.rs
kernel/src/arch/: gdt.rs  mmu.rs  mod.rs  syscall.rs
kernel/src/user/: elf.rs  mod.rs
kernel/verus/: README.md  run-verus.sh
proxy/: Cargo.toml
proxy/src/: main.rs
router/: Cargo.toml
router/src/: config.rs  exit.rs  io.rs  main.rs  storage.rs  sync.rs
scripts/: localnet_down.sh  localnet_send.sh  localnet_up.sh  qemu-aarch64-entry.sh  qemu-aarch64-exit.sh  qemu-aarch64-localnet-down.sh  qemu-aarch64-localnet-entry.sh  qemu-aarch64-localnet-up.sh  qemu-aarch64-middle.sh  qemu-localnet-up.sh
src/: adapters.rs  application.rs  control.rs  core.rs  crypto.rs  demo.rs  forward.rs  fragment.rs  lib.rs  log.rs  main.rs  node.rs  pcd.rs  policy.rs  router.rs  routing.rs  setup.rs  source.rs  sphinx.rs  time.rs  tunnel.rs  types.rs  utils.rs  wire.rs
src/adapters/: hybrid.rs
src/adapters/plonk/: validator.rs
src/adapters/zkboo/: validator.rs
src/api/: prove.rs
src/application/: forward.rs  forward_async.rs  forward_pcd.rs  prove.rs  setup.rs
src/core/: policy.rs
src/core/policy/: capsule.rs  extensions.rs  metadata.rs  mod.rs  queue.rs  registry.rs
src/crypto/: ascon.rs  ctr.rs  dh.rs  kdf.rs  mac.rs  ops.rs  prg.rs  prp.rs  random.rs  stream.rs  zkp.rs
src/crypto/aegis/: core.rs
src/crypto/isogeny/: mod.rs  pairing.rs  params.rs  torsion.rs
src/crypto/isogeny/algorithms/: ideal_to_isogeny.rs  kani.rs  kernel_action.rs  mod.rs  qlapoti.rs  random_ideal.rs  theta.rs  velu.rs
src/crypto/isogeny/arith/: mod.rs  wide_uint.rs
src/crypto/isogeny/curve/: mod.rs  montgomery.rs  point.rs  weierstrass.rs  xonly.rs
src/crypto/isogeny/field/: fp.rs  fp2.rs  mod.rs
src/crypto/isogeny/ideal/: ideal.rs  lattice.rs  mod.rs  order.rs  quaternion.rs
src/crypto/prism/: actual.rs  backend.rs  encoding.rs  hash.rs  keygen.rs  mod.rs  params.rs  reference.rs  sign.rs  types.rs  verify.rs
src/crypto/zkp/: ascon_circuit.rs  chain.rs  circuit.rs  commitment.rs  merkle.rs  mod.rs  seed_tree.rs  zkboo.rs
src/node/: backward.rs  exit.rs  exit_std.rs  forward.rs  pipeline.rs
src/packet/: ahdr.rs  chdr.rs  core.rs  onion.rs  payload.rs
src/pcd/: nova.rs
src/policy/: blocklist.rs  bundle.rs  bytes.rs  client.rs  endpoint.rs  extract.rs  oprf.rs  plonk.rs  poseidon.rs  poseidon_circuit.rs  regex.rs  sha256_circuit.rs  tls.rs  zkboo.rs
src/router/: config.rs  config_std.rs  io.rs  io_std.rs  mod.rs  penalty.rs  runtime.rs  storage.rs  storage_std.rs  sync.rs
src/router/runtime/: mod.rs
src/setup/: directory.rs  pipeline.rs  wire.rs
tests/: pipeline.rs  router_flow.rs  static_config.rs  suppert.rs
userland/: Cargo.toml  build.rs  linker.ld  linker_aarch64.ld
userland/src/: allocator.rs  echo.rs  fs.rs  http.rs  main.rs  router_app.rs  router_io.rs  router_storage.rs  socket.rs  sys.rs  sys_aarch64.rs  sys_stub.rs  sys_x86_64.rs  time_provider.rs
