[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["kernel", "userland"]
resolver = "2"

[lib]
name = "hornet"

[features]
default = []
std = []
http-client = ["std", "dep:ureq"]
bench = []
regex-policy = ["std", "dep:regex"]
pcd-nova = ["std", "dep:nova-snark", "dep:bincode", "dep:num-bigint"]

[dependencies]
# no_std-friendly cryptography building blocks
aes = { version = "0.8", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
digest = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.5", default-features = false }
x25519-dalek = { version = "2", default-features = false }
curve25519-dalek = { version = "3", default-features = false, features = ["u64_backend"] }
dusk-plonk = { version = "0.14", default-features = false, features = ["alloc"] }
dusk-bytes = { version = "0.1", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ureq = { version = "2.9", default-features = false, features = ["json", "tls"], optional = true }
regex = { version = "1.10", optional = true }
nova-snark = { version = "0.41.0", optional = true, default-features = false }
bincode = { version = "1", optional = true }
num-bigint = { version = "0.4", optional = true }
ff = { version = "0.13" }
libc = { version = "0.2" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[[bench]]
name = "hornet"
harness = false
required-features = ["std"]

[[bench]]
name = "prove"
harness = false

[[example]]
name = "routing"
path = "example/routing.rs"

[[example]]
name = "pa"
path = "example/pa.rs"

[[bin]]
name = "hornet_router"
path = "src/bin/hornet_router.rs"
required-features = ["std"]
