[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["kernel", "userland"]
resolver = "2"

[lib]
name = "aurora"

[features]
default = []
std = ["dep:rustls", "dep:rustls-pki-types", "dep:webpki-roots"]
http-client = ["std", "dep:ureq"]
bench = []
regex-policy = ["std", "dep:regex"]
pcd-nova = ["std", "dep:nova-snark", "dep:bincode", "dep:num-bigint"]
localnet-debug = []

[dependencies]
aes = { version = "0.8", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
digest = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.5", default-features = false }
x25519-dalek = { version = "2", default-features = false }
curve25519-dalek = { version = "3", default-features = false, features = ["u64_backend"] }
rand_chacha = { version = "0.3", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ureq = { version = "2.9", default-features = false, features = ["json", "tls"], optional = true }
regex = { version = "1.10", optional = true }
nova-snark = { version = "0.41.0", optional = true, default-features = false }
bincode = { version = "1", optional = true }
num-bigint = { version = "0.4", optional = true }
ff = { version = "0.13" }
libc = { version = "0.2" }
rustls = { version = "0.23.32", default-features = false, features = ["std", "ring"], optional = true }
rustls-pki-types = { version = "1.12.0", default-features = false, optional = true }
webpki-roots = { version = "0.26.11", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[[bench]]
name = "aurora"
harness = false
required-features = ["std"]

[[bench]]
name = "zkboo"
harness = false

[[example]]
name = "routing"
path = "example/routing.rs"

[[bin]]
name = "aurora_router"
path = "src/bin/router.rs"
required-features = ["std"]

[[bin]]
name = "aurora_data_sender"
path = "src/bin/data_sender.rs"
required-features = ["std"]

[[bin]]
name = "aurora_sender"
path = "src/bin/sender.rs"
required-features = ["std"]

[[bin]]
name = "localnet_prep"
path = "src/bin/localnet_prep.rs"
required-features = ["std"]

[[bin]]
name = "aurora_proxy"
path = "src/bin/proxy.rs"
required-features = ["std"]
