[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["authority", "kernel", "proxy", "router", "userland"]
resolver = "2"

[lib]
name = "aurora"

[features]
default = []
std = []
localnet-debug = []

[dependencies]
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
digest = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.5", default-features = false }
x25519-dalek = { version = "2", default-features = false }
curve25519-dalek = { version = "3", default-features = false, features = ["u64_backend"] }
rand_chacha = { version = "0.3", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ff = { version = "0.13" }
libc = { version = "0.2" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[[bench]]
name = "aurora"
harness = false
required-features = ["std"]

[[bench]]
name = "zkboo"
harness = false

[[example]]
name = "routing"
path = "example/routing.rs"
