[package]
name = "aurora-router"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora = { package = "aurora", path = ".." }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ureq = { version = "2.9", default-features = false, features = ["json", "tls"], optional = true }

[dev-dependencies]
authority = { path = "../authority" }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
x25519-dalek = { version = "2", default-features = false }

[features]
http-client = ["dep:ureq"]

[[bin]]
name = "aurora_router"
path = "src/main.rs"
